# BULLKpy

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish-pypi.yml  publish-testpypi.yml  release.yml
docs/: conf.py  index.md  index.rst  install.md  requirements.txt
docs/_build/doctrees/: index.doctree  install.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  install.html  objects.inv  search.html  searchindex.js
docs/api/: bullkpy.get.md  bullkpy.io.md  bullkpy.md  bullkpy.pl.md  bullkpy.pp.md  bullkpy.tl.md  index.md
docs/api/io/: read_counts.md
docs/api/pl/: ari_resolution_heatmap.md  association_heatmap.md  boxplot_with_stats.md  categorical_confusion.md  corr_heatmap.md  corrplot.md  dotplot.md  dotplot_association.md  gene_association.md  gene_association_volcano.md  gene_plot.md  gsea_bubbleplot.md  gsea_leading_edge_heatmap.md  heatmap_association.md  index.md  leading_edge_jaccard_heatmap.md  library_size_vs_genes.md  ma.md  mt_fraction_vs_counts.md  pca_loadings_bar.md  pca_scatter.md  pca_variance_ratio.md  qc_metrics.md  qc_pairplot.md  rank_genes_groups.md  rank_genes_groups_dotplot.md  rankplot.md  rankplot_association.md  sample_correlation_clustergram.md  violin.md  volcano.md
docs/api/pp/: _is_integerish.md  batch_correct_combat.md  filter_genes.md  index.md  (+5 more)
docs/notebooks/: index.md  index.rst
notebooks/: 251224_TCGA_PanCancer.ipynb  BULLKpy_01_CDKpredict.ipynb  BULLKpy_PAPER.ipynb  BULLKpy_TCGA_example_notebook.ipynb
src/bullkpy/: __init__.py  io.py  preprocessing.py
(+280 files in other folders)
